<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tonky</string>
    <string name="ErrorWhenLoadingMap">La carte n\'a pas pu être chargée</string>
    <string name="ErrorWhenGettingLocation">Impossible d\'obtenir la position actuelle</string>
    <string name="action_settings">Paramètres</string>
    <string name="search">Recherche</string>
    <string name="ErrorPermissionWhenGettingLocation">L\'application n\'a pas l\'autorisation nécessaire</string>
    <string name="ErrorWhenDownloadingPlaces">Le téléchargement des informations a échoué</string>
    <string name="DetailButton">Détails</string>
    <string name="AddButton">Ajouter</string>
    <string name="AddedButton">Supprimer</string>
    <string name="RatingImageDescription">Rating</string>
    <string name="toolbarList">Lieux sélectionnés</string>
    <string name="toolbarListParcours"></string>
    <string name="ParcoursButton">Créer un parcours</string>
    <string name="LaunchDirectionService">Recherche du meilleur parcours</string>
    <string name="backButton">Retour</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings_title">Préférences</string>
    <string name="transports_select_title">Moyens de transport</string>
    <string name="transports_select_summary">Choisissez vos moyens de transport</string>
    <string name="monuments_select_title">Types de monuments à visiter</string>
    <string name="monuments_select_summary">Choisissez les types de monuments à visiter</string>
    <string name="time_limit_title">Temps limite (en heures)</string>
    <string name="radius_limit_title">Rayon de recherche (en mètres)</string>
    <string name="LoadInProgress">Chargement en cours...</string>
    <string name="openingHours">Horaires d\'ouverture</string>
    <string name="openingHoursIcon">Opening Hours Icons</string>
    <string name="websiteIcon">Website icon</string>


    <string-array name="array_transports_values">
        <item>&amp;mode=walking</item>
        <item>&amp;mode=transit&amp;transit_mode=tram|bus|subway</item>
        <item>&amp;mode=driving</item>
    </string-array>
    <string-array name="array_transports_titles">
        <item>À pied</item>
        <item>En transports en commun</item>
        <item>En voiture</item>
    </string-array>
    <string name="transport_default">foot</string>
    <string-array name="array_monuments_values">
        <item>aquarium</item>
        <item>art_gallery</item>
        <item>city_hall</item>
        <item>museum</item>
        <item>park</item>
        <item>place_of_worship</item>
        <item>zoo</item>
        <item>establishment|premise</item>
    </string-array>
    <string-array name="array_monuments_titles">
        <item>Aquarium</item>
        <item>Galerie d\'art</item>
        <item>Hôtel de ville</item>
        <item>Musée</item>
        <item>Parc</item>
        <item>Lieu religieux</item>
        <item>Zoo</item>
        <item>Monument</item>
    </string-array>
</resources>
