<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
            android:defaultValue="0"
            android:key="time_limit"
            android:inputType="number"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:numeric="integer"
            android:title="@string/time_limit_title"/>
    <MultiSelectListPreference
            android:key="transports"
            android:title="@string/transports_select_title"
            android:summary="@string/transports_select_summary"
            android:dialogTitle="@string/transports_select_summary"
            android:entries="@array/array_transports_titles"
            android:entryValues="@array/array_transports_values"
            android:defaultValue="@array/array_transports_values"
    />
    <MultiSelectListPreference
            android:key="types_monuments"
            android:title="@string/monuments_select_title"
            android:summary="@string/monuments_select_summary"
            android:dialogTitle="@string/monuments_select_summary"
            android:entries="@array/array_monuments_titles"
            android:entryValues="@array/array_monuments_values"
            android:defaultValue="@array/array_monuments_values"
    />

</PreferenceScreen>
